# ROS-YOLOV8

./: README.md
Rscuad/: .gitignore  CMakeLists.txt  README.md  README_ROS.md  memory.sh  package.xml  path.txt  rscuad.h  setup.sh  testing.cpp
Rscuad/camera/: readme.md
Rscuad/camera/api/: camera.cpp  camera.h
Rscuad/communication/: communication.cpp  communication.h  readme.md
Rscuad/communication/include/: basestation.h  gamecontroller.h  manager.h  network.h  referee.h
Rscuad/communication/src/: basestation.cpp  manager.cpp  network.cpp  referee.cpp
Rscuad/msg/: DataCamera.msg
Rscuad/serial/: readme.md  serial.cpp  serial.h
Rscuad/utilities/: print.cpp  print.h  readme.md  utilities.cpp  utilities.h
rscuad_camera/: .gitignore  CMakeLists.txt  estimation.py  example.py  localization.py  package.xml  readme.md  setup.py  video.py  yolov8.py
rscuad_camera/gateway/: gateway.cpp  gateway.h  gateway.py  makefile  testing.cpp
rscuad_camera/hsv/: hsv.cpp  hsv.h  makefile  readme.md  running.cpp
rscuad_camera/localization/: montecarlo.py
rscuad_module/: CMakeLists.txt  package.xml  readme.md
rscuad_module/src/: rscuad_module.cpp
